src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/block/render.rs
assertion_line: 265
expression: "render_ascii(\"block-beta\\ncolumns 2\\na[\\\"Hello\\\"] b(\\\"Round\\\")\")"
---
+---------+  +---------+
|  Hello  |  |  Round  |
+---------+  +---------+
