src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_block_minimal.snap
---
source: src/mermaid/ascii/block/render.rs
assertion_line: 228
expression: "render_src(\"block-beta\\na\")"
---
┌─────┐
│  a  │
└─────┘
