src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_three_columns_specified.snap
---
source: src/mermaid/ascii/block/render.rs
expression: "render_src(\"block-beta\\ncolumns 3\\na[\\\"Hello\\\"] b(\\\"Round\\\") c((\\\"Circle\\\"))\")"
---
┌─────────┐  ╭─────────╮  ╭────────────╮
│  Hello  │  │  Round  │  │(  Circle  )│
└─────────┘  ╰─────────╯  ╰────────────╯
