src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_two_columns.snap
---
source: src/mermaid/ascii/block/render.rs
assertion_line: 233
expression: "render_src(\"block-beta\\ncolumns 2\\na b c d\")"
---
┌─────┐  ┌─────┐
│  a  │  │  b  │
└─────┘  └─────┘

┌─────┐  ┌─────┐
│  c  │  │  d  │
└─────┘  └─────┘
