src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_with_circle.snap
---
source: src/mermaid/ascii/block/render.rs
expression: "render_src(\"block-beta\\nc((\\\"Center\\\"))\")"
---
╭────────────╮
│(  Center  )│
╰────────────╯
