src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_with_diamond.snap
---
source: src/mermaid/ascii/block/render.rs
assertion_line: 250
expression: "render_src(\"block-beta\\nd{\\\"Decide\\\"}\")"
---
╱──────────╲
│  Decide  │
╲──────────╱
