src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_with_edge.snap
---
source: src/mermaid/ascii/block/render.rs
assertion_line: 260
expression: "render_src(\"block-beta\\na b\\na --> b\")"
---
┌─────┐  ┌─────┐
│  a  │  │  b  │
└─────┘  └─────┘

a ─► b
