src/mermaid/ascii/block/snapshots/veol__mermaid__ascii__block__render__tests__render_with_round_block.snap
---
source: src/mermaid/ascii/block/render.rs
assertion_line: 245
expression: "render_src(\"block-beta\\nb(\\\"Round\\\")\")"
---
╭─────────╮
│  Round  │
╰─────────╯
